# guard-intent

./: Dockerfile  README.md  config.yaml  plan.md  pyproject.toml
docs/: README.md  project_vision.md  stack_inventory.md
guard_intent/: __init__.py  __main__.py  cli.py  config.py  scoring.py  utils.py
guard_intent/enrichment/: virustotal.py
guard_intent/integrations/: exporters.py
guard_intent/iocs/: loader.py  matcher.py  validator.py
guard_intent/normalize/: base.py  csv_parser.py  json_parser.py  normalizer.py
guard_intent/plugins/: loader.py
guard_intent/reporting/: html.py  json.py  markdown.py
guard_intent/rules/: base.py  brute_force.py  ioc_match.py  lateral_movement.py  privileged_abnormal.py  rare_process.py
guardintent/: cli.py  models.py  scoring.py
guardintent/enrichment/: virustotal.py
guardintent/integrations/: exporters.py
guardintent/reporting/: html.py  json.py  markdown.py
guardintent/rules/: base.py  brute_force.py  ioc_match.py  lateral_movement.py  privileged_abnormal.py  rare_process.py
plugins/: sample_custom_rule.py
tests/: test_enrichment.py  test_integrations.py  test_iocs.py  test_normalize.py  test_reporting.py  test_scan.py  test_scoring.py
